Bug 67725 - CLI SDK Namespace missing
Summary: CLI SDK Namespace missing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: sdk (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: x86 (IA32) Windows (All)
: medium critical
Assignee: Stephan Bergmann
URL:
Whiteboard: target:4.2.0 target:4.1.4
Keywords: regression
: 67404 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-08-04 01:13 UTC by Lt Col RDS Chauhan
Modified: 2015-06-18 12:02 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lt Col RDS Chauhan 2013-08-04 01:13:32 UTC
namespace not found :
unoidl.com.sun.star.frame
Comment 1 m_a_riosv 2013-08-04 15:11:44 UTC
Hi Lt, thanks for reporting,

Please can you detail the steps to get the error, and your operating system (e.g. Win7x64Home) and the LibreOffice detailed version, as it is in Menu/Help/About, you can select and copy from there.

Have you tried resetting the user profile?.

Before confirmation changed the Importance from blocker to medium.
Comment 2 Lt Col RDS Chauhan 2013-08-05 11:47:25 UTC
1. Steps to get the error :
  (a) Create new .NET project using Visual Studio / Sharpdevelop
  (b) Add references to CLI DLL files
  (c) Use the code of the SDK examples for CLI CSharp
  (d) Compile
  (e) using unoidl.com.sun.star.frame; line report compilation error

2. OS : Windows 7x32Home

3. Libre Office Version 4.1.0.4 release

4. Tried user profile : Not understood please !

5.  Importance is medium as i notice.
Comment 3 Taylorh140 2013-08-05 20:22:39 UTC
More Information,

After Adding References to 
C:\Program Files (x86)\LibreOffice 4\sdk\cli\*

cli_basetypes.dll
cli_cppuhelper.dll
cli_oootypes.dll
cli_ure.dll
cli_uretypes.dll

And

C:\Program Files (x86)\LibreOffice 4\URE\bin\cli_uno.dll

Namespaces currently included in these assemblies are listed:

cli_basetypes.dll
 -uno

cli_cppuhelper.dll
 -uno.util

cli_oootypes.dll
 -unoidl.org.freedesktop.PackageKit

cli_uno.dll
 -cli_uno

cli_ure.dll
 -uno.util

cli_uretypes.dll
 -unoidl.com.sun.star.beans
 -unoidl.com.sun.star.bridge
 -unoidl.com.sun.star.bridge.oleautomation
 -unoidl.com.sun.star.connection
 -unoidl.com.sun.star.container
 -unoidl.com.sun.star.io
 -unoidl.com.sun.star.java
 -unoidl.com.sun.star.lang
 -unoidl.com.sun.star.loader
 -unoidl.com.sun.star.reflection
 -unoidl.com.sun.star.registry
 -unoidl.com.sun.star.script
 -unoidl.com.sun.star.security
 -unoidl.com.sun.star.task
 -unoidl.com.sun.star.uno
 -unoidl.com.sun.star.uri
 -unoidl.com.sun.star.util

So not only is unoidl.com.sun.star.frame missing, but a great deal of other namespaces.
Comment 4 Lolek 2013-09-02 13:14:35 UTC
I've same problem in version 4.1.0.4 You must install older version LibreOffice 3.6.7 (SDK) there it worked.
Comment 5 Pavel Prchal 2013-09-17 19:49:30 UTC
Is this issue fixed?
I think, that is critical bug - we cannot do bootstrap.

In previous version this type was included.

using unoidl.com.sun.star.frame; -- this is not working

So, the following bootstrap code is broken:

                //Get MultiServiceFactory
                var xRemoteFactory = (XMultiServiceFactory)xLocalContext.getServiceManager();
                Console.Out.WriteLine("3");
                Console.Out.WriteLine("xRemoteFactory " + xRemoteFactory.ToString());

 
                //Get a CompontLoader -- bug XComponentLoader is not contained
                _ALoader = (XComponentLoader)xRemoteFactory.createInstance("com.sun.star.frame.Desktop");
Comment 6 Lafriks 2013-10-21 14:38:04 UTC
Version 4.1.2.3 still contains same bug that lot of namespaces are missing in CLI SDK
Comment 7 Stephan Bergmann 2013-10-23 13:33:13 UTC
climaker-generated cli_oootypes.dll misses all UNOIDL entities starting with toplevel module "com" (and only contains the handful of entities starting with toplevel module "org").  This is a regression introduced with the new types.rdb format in LO 4.1.
Comment 8 Commit Notification 2013-10-24 08:05:05 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bdd55e28fc7788c2968daaf87b782f8e6189ee2d

fdo#67725 unoidl::AggregatingCursor must wrap modules for aggregation, too



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Stephan Bergmann 2013-10-24 11:45:18 UTC
(In reply to comment #8)
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=bdd55e28fc7788c2968daaf87b782f8e6189ee2d
> 
> fdo#67725 unoidl::AggregatingCursor must wrap modules for aggregation, too

requested backport to libreoffice-4-1 towards LO 4.1.4, <https://gerrit.libreoffice.org/#/c/6415/>
Comment 10 Stephan Bergmann 2013-10-28 10:21:04 UTC
(Before the above fix, building the SDK's examples/CLI/CSharp/Spreadsheet/ would fail.  After the fix, building it succeeds but running the resulting GeneralTableSample.exe against the instdir LO installation would still fail, as the instdir LO installation does not install the cli_*.dll into the GAC; but running the resulting GeneralTableSample.exe against a properly installed LO .msi installation set succeeds.)
Comment 11 Commit Notification 2013-10-29 12:14:03 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cfa141a67592ae5eda7ccf9cc8dbfbe78c7b1959&h=libreoffice-4-1

fdo#67725 unoidl::AggregatingCursor must wrap modules for aggregation, too


It will be available in LibreOffice 4.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 serg 2013-11-02 12:55:53 UTC
I have tested daily builds for both 4.1.4 and 4.2.0.

libreoffice-4-1~2013-10-31_04.48.54_LibreOfficeDev_4.1.4.0.0_Win_x86.msi 
libo-master~2013-11-01_23.37.14_LibreOfficeDev_4.2.0.0.alpha0_Win_x86.msi
Program: "WriterDemo" from sdk (vb.net)
IDE: Visual Studio Express 2012

The results are the same.
The programs builds successfully, which says the bug we are talking about here is probably fixed.
But it does not run, which says there is probably another bug. Something with bootstrap, again.

Unhandled Exception: System.Runtime.InteropServices.SEHException: External component has thrown an Exception.
   at cppu.bootstrap(Reference<com::sun::star::uno::XComponentContext>* )
   at uno.util.Bootstrap.bootstrap()
   at ConsoleApplication1.Module1.Main(String[] args)

Should I, or somebody else, report it?
Comment 13 Stephan Bergmann 2013-11-04 07:52:20 UTC
(In reply to comment #12)
> Should I, or somebody else, report it?

Yes, please file a new bug and reports its number here.
Comment 14 serg 2013-11-04 18:21:20 UTC
Filed a new bug. It is 71229
https://bugs.freedesktop.org/show_bug.cgi?id=71229
Comment 15 Buovjaga 2015-06-18 12:02:29 UTC
*** Bug 67404 has been marked as a duplicate of this bug. ***